Fixed problems with iedit, fixed postmark, season alignment issue in FF usersettings, z-index in photoplayer, infinite vote in ie.

--- a/html/css/app.css
+++ b/html/css/app.css
@@ -1472,6 +1472,7 @@ margin-top:10px;
 	overflow: hidden;
 	width: 100%;
 	position: relative;
+    float: right;
 }
 
 .complevels-inner {
